<resources>
    <string name="app_name">Law-Tech-App</string>
    <string name="as_client"><u>Client</u></string>
    <string name="as_lawyer"><u>Lawyer</u></string>
    <string name="forgot_password">I forgot my password</string>
    <string name="loading">Loading..</string>
    <string name="err_msg_enter_email"><b>Email is missing ! Please enter email !</b></string>
    <string name="err_msg_enter_password"><b>Password is missing ! Please enter password !</b></string>

    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="forgot_password_tv1"><b>Forgot your password ?</b></string>
    <string name="forgot_password_tv2">Enter your email address and we\'ll send you a mail to reset your password</string>
    <string name="email_sent"><b>Email sent successfully !</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit"><u><b>Edit</b></u></string>
    <string name="yes"><b>Yes</b></string>
    <string name="no"><b>No</b></string>
    <string-array name="priority_spinner_items">
        <item>Immediate</item>
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
    </string-array>
    <string-array name="types_spinner_items">
        <item>Consultation</item>
        <item>Documents Transfer</item>
        <item>Personal</item>
        <item>Court</item>
        <item>Administrative</item>
        <item>Company Event</item>
        <item>Case Handling</item>
        <item>Other</item>
    </string-array>

    <string-array name="freqs_spinner_items">
        <item>Monthly</item>
        <item>Weekly</item>
        <item>Daily</item>
        <item>Always</item>
    </string-array>


</resources>