<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.LoginActivity">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="410dp"
        android:layout_height="146dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/auth_logo_width_size"
            android:layout_height="@dimen/auth_logo_height_size"
            android:layout_gravity="center"
            android:src="@drawable/logo_transparent"/>
    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="179dp"
        android:layout_height="45dp"
        android:clickable="false"
        android:gravity="center"
        android:text="Login"
        android:textColor="#D3AC2B"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_sub_activity"
        android:layout_width="347dp"
        android:layout_height="402dp"
        android:layout_marginBottom="65dp"
        android:background="#373F50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <TextView
            android:id="@+id/tv_login_donthaveaccount"
            android:layout_width="192dp"
            android:layout_height="27dp"
            android:layout_marginEnd="2dp"
            android:gravity="center"
            android:text="@string/dont_have_account"
            android:textColor="#D3AC2B"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/tv_login_register"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="309dp"
            android:layout_height="59dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rb_client"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_type_tab_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/as_client"
                android:textColor="@drawable/drawable_type_tab_text_color_selector"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb_lawyer"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/drawable_type_tab_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/as_lawyer"
                android:textColor="@drawable/drawable_type_tab_text_color_selector"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="323dp"
            android:layout_height="62dp"
            android:visibility="visible"
            app:boxBackgroundColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/til_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/tie_forgotpassword_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/sym_action_email"
                android:textSize="20sp"
                android:visibility="visible"
                tools:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="323dp"
            android:layout_height="62dp"
            android:layout_marginBottom="150dp"
            android:visibility="visible"
            app:boxBackgroundColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/tie_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_lock_idle_lock"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="294dp"
            android:layout_height="54dp"
            android:backgroundTint="#D3AC2B"
            android:enabled="true"
            android:text="Login"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_2"
            app:layout_constraintVertical_bias="0.562" />

        <TextView
            android:id="@+id/forgot_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="#D3AC2B"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/til_2"
            app:layout_constraintTop_toBottomOf="@+id/til_2" />

        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:text="@string/register"
            android:textColor="@color/yellow"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toEndOf="@+id/tv_login_donthaveaccount"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>